--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
         </form>
     </section>
 
-    <div class="socialmedia">
+    <!<div class="socialmedia">
         <a href="http://instagram.com/aman_goyal2895/"><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="insta" height="50px" width="50px"></a>
         <a href="http://linkedin.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0bGEl9v47XieEtHyj0TqTr1tOXJmib-KHtw&s" alt="linkedin" height="50px" width="50px"></a>
         <a href="http://twitter.com"><img src="https://avatars.githubusercontent.com/u/50278?s=280&v=4" alt="twitter" height="50px" width="50px"></a>
-    </div>
+    </div>–>
 
     <footer class="bg-dark text-white text-center py-4">
         <p>&copy; 2024 My Portfolio: created by Aman Goyal</p>
